# intellipost-ia

./: .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_CHANGES.md  CI_FIX_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_TYPE_SAFETY_ARCHITECTURE.md  DATABASE.md  HEXAGONAL_ARCHITECTURE.md  PROCESS_LEARNING.md  PR_COMMENTS_RESOLUTION_SUMMARY.md  PR_RESPONSE_DEPENDENCY_INJECTION.md  README.md  SINGLE_USER_AUTH.md  auth-final-report.md  conftest.py  consolidated-action-plan-epic1-story2.md  docker-compose.test.yml  docker-compose.yml  learning-final.md  learning-items.md  package-lock.json  package.json  pr-context-epic1-story2.md  pre-refactor-validation-report.md  pyproject.toml  pytest.ini  tach.toml  test-ux-interaction.js  test_auth_backend.py
backend/: .bandit  .env.example  .pyrightignore  Dockerfile  ENVIRONMENT_STATUS.md  QA_COMPREHENSIVE_REVIEW_REPORT.md  QA_V3_COMPREHENSIVE_ASSESSMENT_REPORT.md  RESTORED_TEST_COVERAGE.md  __init__.py  alembic.ini  architectural_compliance_report.md  audit.json  conftest.py  entrypoint-dev.sh  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  scripts.sh  tach.toml  tach_module_graph.dot  test_hooks.py
backend/api/: app_factory.py  container.py  dependencies.py
backend/api/dependencies/: __init__.py  logging.py
backend/api/protocols/: __init__.py  authentication_provider.py  content_provider.py  product_provider.py
backend/api/routers/: auth.py  auth_router.py  config.py  health.py  root.py
backend/api/schemas/: auth_schemas.py  config.py  health.py
backend/application/: __init__.py
backend/application/container/: __init__.py  dependency_injection.py
backend/application/dto/: __init__.py
backend/application/protocols/: __init__.py  module_coordination_protocols.py
backend/application/services/: __init__.py  user_orchestration_service.py
backend/application/use_cases/: __init__.py
backend/di/: __init__.py  auth_container.py  container.py  module_discovery.py  user_container.py
backend/docs/architecture/: protocol-architecture.md
backend/domain/: exceptions.py
backend/domain/entities/: __init__.py  confidence_score.py  product.py  product_status_manager.py  user.py
backend/domain/services/: __init__.py  ai_service_protocols.py  domain_service_protocols.py  external_service_protocols.py  protocols.py  repository_protocols.py
backend/infrastructure/: README.md  __init__.py  database.py  redis_client.py  seed.py
backend/infrastructure/config/: base_config.py  dependencies.py  logging.py  production_https.md  settings.py
backend/infrastructure/health/: __init__.py  health_checker.py  health_router.py  health_schema.py
backend/infrastructure/logging/: __init__.py  adapters.py  factory.py
backend/infrastructure/middleware/: __init__.py  csrf.py  rate_limit.py  security_middleware.py
backend/infrastructure/tests/: test_marks_enforcement.py  test_settings.py
backend/intellipost/: __init__.py
backend/intellipost_ia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 002_seed_default_admin_user.py  003_create_ml_credentials_table.py  004_create_products_tables.py  005_add_prompt_text_to_products.py  006_create_generated_content_table.py  8c6893b289bb_create_users_and_refresh_tokens_tables.py  8cb75af5b3b0_add_users_and_refresh_tokens_tables.py  96e5e47c25f9_create_users_table_for_authentication.py  add_password_changed_at.py  create_users_table.py
backend/modules/ai_content/domain/: ai_service_protocols.py
backend/modules/ai_content/infrastructure/: config.py
backend/modules/auth/api/: auth_router.py  auth_service_protocol.py  dependencies.py  error_handlers.py  router.py  schemas.py
backend/modules/auth/application/: authentication_service.py  authentication_service_impl.py
backend/modules/auth/docs/: authentication-guide.md  mobile-token-storage.md
backend/modules/auth/domain/: authentication_service.py  authentication_service_protocol.py  models.py  protocols.py  user_domain_service.py  user_status.py  value_objects.py
backend/modules/auth/infrastructure/: jwt_manager.py  jwt_service.py  middleware.py  password_manager.py  password_service.py  secure_storage.py  token_blacklist.py
backend/modules/communications/domain/: email_service_protocol.py  notification_domain_service.py
backend/modules/content_generation/: pytest.ini
backend/modules/content_generation/domain/: exceptions.py
backend/modules/content_generation/infrastructure/: config.py
backend/modules/content_generation/tests/: README.md  __init__.py  conftest.py  test_performance.py  test_runner.py
backend/modules/marketplace_integration/infrastructure/: config.py
backend/modules/mercadolibre/domain/: mercadolibre_service_protocol.py
backend/modules/mercadolibre/infrastructure/: config.py
backend/modules/product_management/: __init__.py
backend/modules/user/: __init__.py
backend/modules/user_management/: __init__.py
backend/shared/: __init__.py
backend/shared/logging/: __init__.py  factory_protocol.py  protocols.py
backend/shared/migration/: __init__.py  dtos.py  value_object_migration.py
backend/shared/tests/: __init__.py  test_migration.py  test_migration_dtos.py
backend/shared/value_objects/: __init__.py  base.py  exceptions.py  price_range.py  protocols.py
backend/type_checker_analysis/: README.md  SUMMARY.md  analysis_results.md
backend/type_checker_analysis/config_tests/: pyright_lenient.py  pyrightconfig.json
backend/type_checker_analysis/generics_tests/: basic_generics.py  generic_constraints.py  generic_protocols.py  variance_tests.py
backend/type_checker_analysis/protocol_tests/: missing_methods.py  runtime_checkable.py  structural_subtyping.py  wrong_signatures.py
docs/: prd.md  (+7 more)
research/static_duck_typing_poc/: EXECUTIVE_SUMMARY.md  README.md  RESEARCH_REPORT.md  advanced_test.py  boundary_test.py  integration_test.py  pyproject.toml
research/static_duck_typing_poc/product_management/: __init__.py  product.py  protocols.py
research/static_duck_typing_poc/user_management/: __init__.py  user.py
(+645 files in other folders)
